# pluto

./: .gitignore  Cargo.toml  Config.toml  Makefile  Pluto  README.md
docs/: Gitflow.md  README.md
engine/: Cargo.toml  Config.toml
engine/src/: bound.rs  config.rs  eval.rs  lib.rs  logger.rs  main.rs  moves.rs  principal_variation.rs  transposition.rs  uci.rs
engine/src/nnue/: mod.rs
engine/src/search/: counter.rs  history.rs  history_stack.rs  info.rs  killers.rs  mod.rs  move_picker.rs  params.rs  pv.rs  search.rs  search_params.rs  tt.rs
engine/src/time_control/: mod.rs  time_controller.rs  time_mode.rs
nnue/: Cargo.toml
nnue/checkpoints/screlu-768-256-1-10/: log.txt
nnue/checkpoints/screlu-768-256-1-100/: log.txt
nnue/checkpoints/screlu-768-256-1-20/: log.txt
nnue/checkpoints/screlu-768-256-1-30/: log.txt
nnue/checkpoints/screlu-768-256-1-40/: log.txt
nnue/checkpoints/screlu-768-256-1-50/: log.txt
nnue/checkpoints/screlu-768-256-1-60/: log.txt
nnue/checkpoints/screlu-768-256-1-70/: log.txt
nnue/checkpoints/screlu-768-256-1-80/: log.txt
nnue/checkpoints/screlu-768-256-1-90/: log.txt
nnue/checkpoints/screlu-768-512-1-10/: log.txt
nnue/checkpoints/screlu-768-512-1-20/: log.txt
nnue/checkpoints/simple-2/: log.txt
nnue/src/: main.rs  train.rs
scripts/: build.sh
src/: bound.rs  config.rs  eval.rs  main.rs  moves.rs  perft.rs  principal_variation.rs  search.rs  timecontrol.rs  transposition.rs  uci.rs
src/nnue/: mod.rs
src/search/: search.rs  search_info.rs  search_params.rs
src/time_control/: time_controller.rs  time_mode.rs
(+14 files in other folders)
