[package]
name = "castled_engine"
version = "0.1.0"
edition = "2021"
authors = ["Ludovic Debever ludovicdebever0@gmail.com", 'Eliott Reigner', 'Mahdi Aribi']
description = "The Castled org chess engine"
repository = "https://github.com/CastledChess/engine"


[lib]
crate-type = ["cdylib"]
name = "CastledEngine"
path = "src/main.rs"

[dependencies]
nnue = { path = "nnue" }
queues = "1.1.0"
shakmaty = "0.27.2"
serde_derive = "1.0.215"
toml = "0.8.19"
serde = "1.0.215"
wasm-bindgen = "0.2.100"
chrono = "0.4.40"
web-sys = { version = "0.3.77", features = [
    'Worker',
] }